Mon Jan 11 23:53:33 1999  James Larus  <larus@breeze.cs.wisc.edu>

	* tt.be.s tt.le.s:
	New tests from PC port.

	* parser.y scanner.l inst.c:
	New EOF code did not work with bison, which does not allow a
	non-terminal with the value 0.

1999-01-07  Jim Larus  <larus@drh-alpha.dns.microsoft.com>

	* spim.c xspim.c:
	Report undefined symbols before running program.

1998-12-16    <larus@JIM>

	* Pervasive:
	Update copyright.

1998-12-14    <larus@JIM>

	* parser.y:
	Allow pseudo ops with -pseudo flg.

	* parser.y parser.h sym-tbl.c spim.h spim-utils.c sym-tbl.h
	Test/tt.be.s:
	Bogus main undefined error if parser failed before main.

	* mem.c:
	Shift was incorrect.

	* spim.h:
	Redefine 1000K as K * K.

1998-12-14    <larus@JIM>

	* mem.c:
	Force redraw of screen after updating text/data in bad address
	handler.

	* sym-tbl.c:
	Did not adjust high 16 bits in forward ref to symbol in LW/ST
	inststruction.

	* mips-syscal.c:
	Force redisplay of data segment after readining string or sbrk.

1998-12-14    <larus@JIM>

	* display-utils.c:
	Change floating point format to increase precision and always
	print decimal point.

1998-12-13    <larus@JIM>

	* inst.{c,h} spim.h run.c:
	Negative branch displacements handled inconsistently (shift
	before/after sign extend).

1998-12-07    <larus@JIM>

	* spim-utils.c sym-tbl.c parser.y:
	Predefine main as global.  Fix symbol table initialization.

	* spim.c sym-tbl.{c,h} display-utils.c PCSpim.rc PCSpimView.cpp
	resourc.h RunDlg.cpp RunDlg.h SettingsDlg.cpp SpimReg.h:
	Print undefined symbols before running program.

1998-12-05    <larus@JIM>

	* parser.y:
	Last line was not parsed if it did not end with newline.

1998-12-02    <larus@JIM>

	* pcspim.ncb pcspim.dsp pcspim.plg pcspim.opt lex.yy.c parser.y:
	Invoke yacc and lex from within VS.

1998-12-01    <larus@JIM>

	* pcspim.dsp pcspim.opt PCSpimView.cpp pcspim.plg xspim.c
	spim-utils.h display-utils.h:
	Share common code for formating machine contents.
