@@ -1,1 +1,1 @@
-Version 6.1 of December 30, 1997
+Version 6.2 of January 11, 1999
